# kde1-kdetoys

./: .cvsignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.cvs  README  acconfig.h  config.h.bot  configure.in.1  configure.in.2  configure.in.in
debian/: README.debian  changelog  control  copyright  dirs  kderules  man-pages  menu.in  postinst  rules  undocumented
kmoon/: .cvsignore  AUTHORS  CMakeLists.txt  Makefile.am  kmoon.cpp  kmoon.h  kmoon.kdelnk  kmoon.xpm  large-koon.xpm  mini-kmoon.xpm  phases.cpp
kmoon/pics/: CMakeLists.txt  Makefile.am
kworldwatch/: .cvsignore  CMakeLists.txt  KWorldWatch.kdelnk  Makefile.am  astro.c  astro.h  kinputline.cpp  kinputline.h  kworldwatch.xpm  large-kworldwatch.xpm  main.cpp  mini-kworldwatch.xpm  sunclock.c  sunclock.h  toplevel.cpp  toplevel.h  world.cpp  world.h
kworldwatch/pics/: CMakeLists.txt  Makefile.am  flag-blue.xpm  flag-green.xpm  flag-red.xpm  flag-yellow.xpm
mouse/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  gridbag.cpp  gridbag.h  gridbag.moc.cpp  index.html  kimgnum.cpp  kimgnum.h  kimgnum.moc.cpp  kodo  kodo.cpp  kodo.h  kodo.kdelnk  kodo.moc.cpp  kodo.xpm  large-kodo.xpm  mini-kodo.xpm  stl.hxx  toolbar.cpp
po/: CMakeLists.txt  Makefile.am  kmoon.pot  kworldwatch.pot
po/br/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/cs/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/da/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/de/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/es/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/et/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/fi/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/fr/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/hr/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/is/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/ja/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/no/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/pl/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/pt/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/pt_BR/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/ro/: CMakeLists.txt  Makefile.am  kworldwatch.po
po/sk/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/sl/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/sv/: CMakeLists.txt  Makefile.am  kmoon.po  kworldwatch.po
po/zh_CN.GB2312/: CMakeLists.txt  Makefile.am  kmoon.po
