
pics_DATA = \
	moon1.gif    moon14.gif   moon19.gif   moon22.gif   moon27.gif   \
	moon5.gif    moon10.gif   moon15.gif   moon23.gif   moon9.gif    \
	moon28.gif   moon6.gif    moon11.gif   moon16.gif   moon2.gif    \
	moon24.gif   moon29.gif   moon7.gif    moon12.gif   moon17.gif   \
	moon20.gif   moon25.gif   moon3.gif    moon8.gif    moon13.gif   \
	moon18.gif   moon21.gif   moon26.gif   moon4.gif    

picsdir = $(kde_datadir)/kmoon/pics

EXTRA_DIST = $(pics_DATA)

